Improve menu icons (#56)
* Add `menuIcons` property, enhance menu customization, update tests, and refactor `width` handling

- Introduced a new `menuIcons` system property to toggle menu icons.
- Added `menuIconsOffset` property to configure icon spacing in menus.
- Updated `TMenu` and `TMenuItem` to use the `menuIcons` and `menuIconsOffset` properties.
- Replaced inlined emoji width calculations with `UnicodeWidth.width()` for clarity and maintenance.
- Added comprehensive tests for `menuIcons` and `menuIconsOffset` in `SystemPropertiesTest`.
- Modified `DemoApplication` to include the new `menuIcons` menu option and update item rendering.
- Updated `LogicalScreen` to use updated Unicode complexity for drawing.
- Refactored property key handling and default icon toggling logic.

* Address PR review feedback: consistency, documentation, and license headers (#58)

* Initial plan

* Apply review feedback: update docs, license headers, and improve code consistency

Co-authored-by: crramirez <8397379+crramirez@users.noreply.github.com>

* Update code/src/main/java/casciian/backend/SystemProperties.java

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: crramirez <8397379+crramirez@users.noreply.github.com>
Co-authored-by: Carlos Rafael Ramirez <crramirez@users.noreply.github.com>
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* Refactor character rendering logic: remove redundant character assignment in `LogicalScreen` and skip emitting right-half of full-width characters in `ECMA48Terminal`.

* Update code/src/main/java/casciian/backend/SystemProperties.java

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* Initial plan

* Fix OSC 4 color parsing for 16-bit components

The set88Color() method in terminal/ECMA48.java was not correctly
parsing 16-bit (4-digit hex) color components from OSC 4 pale